arrow btn alignment correction

--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -49,6 +49,10 @@
   border: none;
 }
 .arrow-button {
+  // position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
   width: 42px;
   height: 42px;
